apps/goatlint/src/snapshots/fixtures__cli__extends_config_overrides_same_directory@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: overrides_same_directory
working directory: fixtures/cli/extends_config
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[overrides_same_directory/config/test.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintSucceeded
----------
