apps/goatlint/src/snapshots/fixtures__cli__extends_invalid_config_@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/extends_invalid_config
----------
Failed to parse goatlint configuration file.

  x Invalid configuration for rule `jest/no-hooks`:
  |   invalid type: boolean `true`, expected a string
  |   received config: `{ "allow": [ true, false ] }`

----------
CLI result: InvalidOptionConfig
----------
