apps/goatlint/src/snapshots/fixtures__cli__ignore_file_current_dir_ .@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/ignore_file_current_dir
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------

########## 
arguments: .
working directory: fixtures/cli/ignore_file_current_dir
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
