apps/goatlint/src/snapshots/fixtures__cli__ignore_pattern_non_glob_syntax_ .@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/ignore_pattern_non_glob_syntax
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: LintSucceeded
----------

########## 
arguments: .
working directory: fixtures/cli/ignore_pattern_non_glob_syntax
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: LintSucceeded
----------
