apps/goatlint/src/snapshots/fixtures__cli__ignore_pattern_non_glob_syntax_ .@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/ignore_pattern_non_glob_syntax
----------
No files found to lint. Please check your paths and ignore patterns.
Finished in <variable>ms on 0 files using 1 threads.
----------
CLI result: LintNoFilesFound
----------

########## 
arguments: .
working directory: fixtures/cli/ignore_pattern_non_glob_syntax
----------
No files found to lint. Please check your paths and ignore patterns.
Finished in <variable>ms on 0 files using 1 threads.
----------
CLI result: LintNoFilesFound
----------
